# rSnip

./: .gitignore  Cargo.toml  README.md  release-local.ps1
docs/: architecture-decisions.md  behavior.md
src/: app.rs  clipboard.rs  config.rs  errors.rs  hotkeys.rs  ipc.rs  main.rs  ocr.rs  paths.rs  single_instance.rs
src/editor/: history.rs  mod.rs  render.rs  tools.rs
src/overlay/: mod.rs  recording.rs  selection.rs  toast.rs
src/recording/: cursor.rs  encoder.rs  mod.rs
src/screen/: capture.rs  mod.rs  monitor.rs  windows.rs
