[package]
name = "rsnip"
version = "0.1.1"
edition = "2024"
description = "Minimal native Windows snipping, recording, and OCR tool."
license = "MIT"

[dependencies]
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
dirs = "5"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
winit = "0.30"
softbuffer = "0.4"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_System_Threading",
  "Win32_System_SystemInformation",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Pipes",
  "Win32_System_IO",
  "Win32_System_Ole",
  "Win32_Storage_FileSystem",
  "Win32_UI_Shell"
] }
